实现业务逻辑